--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -55,6 +55,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+	  <finalName> app_log</finalName>
 	</build>
 
 </project>
